<resources>
    <string name="app_name">PNOTCA</string>

    <string name="register"><u>Register</u></string>
    <string name="registerS"><u><b>Register</b></u></string>
    <string name="feedbackS"><u><b>Send Feedback</b></u></string>
    <string name="child_name">Name of child</string>
    <string name="age">Age of child</string>
    <string name="specialist">Name of specialist</string>
    <string name="email">Email</string>
    <string name="select_one_of_puzzle"><b>Select One of the Puzzle to Start</b></string>
    <string name="select_one_of_pattern"><b>Select One of the pattern to Start</b></string>
    <string name="feature_comming_soon">Feature is Comming Soon</string>


    <string name="simple_level"><u><b>Simple Level</b></u></string>
    <string name="simple_puzzle"><u><b>Simple Puzzle</b></u></string>

    <string name="median_level"><u><b>Median Level</b></u></string>
    <string name="median_puzzle"><u><b>Median Puzzle</b></u></string>

    <string name="advance_level"><u><b>Advanced Level</b></u></string>
    <string name="advance_puzzle"><u><b>Advanced Pattern</b></u></string>


</resources>
